--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
-  #firebase: ^9.0.2
-  #firebase_auth: ^3.3.16
-  #firebase_core: ^1.15.0
-  #cloud_firestore: ^3.1.13
+  firebase_auth: ^3.3.16
+  firebase_core: ^1.15.0
+  cloud_firestore: ^3.1.13
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +65,7 @@ flutter:
   assets:
     - assets/logo.png
     - assets/anime.png
+    - assets/home.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
